# my-pi-server

./: README.md  anecdote.py  bot.py  config.py  pyproject.toml  requirements.txt  server_info.py  statistic.py  values.py  weather.py
