[tool.poetry]
name = "my_pi_server"
version = "0.1.0"
description = ""
authors = ["keshe4ka <artem.anaschenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
aioschedule = "^0.5.2"
beautifulsoup4 = "^4.10.0"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
Pillow = "^9.0.0"
psutil = "^5.9.0"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
